# YouGlieMCP

./: .gitignore  CLAUDE.md  README.md  get_api_key.py  install.py  mcp.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
skills/yougile-create/: SKILL.md
skills/yougile-move/: SKILL.md
skills/yougile-my-tasks/: SKILL.md
skills/yougile-task/: SKILL.md
skills/yougile-update/: SKILL.md
yougile_mcp/: __main__.py  client.py  config.py  errors.py  resolvers.py  server.py  types.py
yougile_mcp/tools/: boards.py  chat.py  stickers.py  tasks.py  users.py  workspace.py
