[project]
name = "yougile-mcp"
version = "0.1.0"
description = "Story-based MCP server for Yougile project management"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
yougile-mcp = "yougile_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
