[project]
name = "yougile-mcp"
version = "0.1.0"
description = "MCP server for Yougile project management"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Isk4R1oT"},
]
keywords = ["mcp", "yougile", "project-management", "fastmcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/Isk4R1oT/YouGlieMCP"
Repository = "https://github.com/Isk4R1oT/YouGlieMCP"

[project.scripts]
yougile-mcp = "yougile_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
